Actions
Bug #10415
closedMemory leak in ipadm_zone_get_network()
Start date:
2019-02-18
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
There is a memory leak in libipadm:i_ipadm_zone_get_network().
Updated by Andy Fiddaman over 4 years ago
Review is at https://www.illumos.org/rb/r/1486/
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit ffe245b40fe1731e6f0ea5c097a74eb78bc839e2
commit ffe245b40fe1731e6f0ea5c097a74eb78bc839e2 Author: Andy Fiddaman <omnios@citrus-it.co.uk> Date: 2019-02-20T21:17:16.000Z 10415 Memory leak in ipadm_zone_get_network() Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Robert Mustacchi <rm@joyent.com>
Actions