10415 Memory leak in ipadm_zone_get_network() Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Robert Mustacchi <rm@joyent.com>